--- a/references.bib
+++ b/references.bib
@@ -98,13 +98,7 @@
 }
 
 
-@inproceedings{mikolov2013distributed,
-	title={Distributed representations of words and phrases and their compositionality},
-	author={Mikolov, Tomas and Sutskever, Ilya and Chen, Kai and Corrado, Greg S and Dean, Jeff},
-	booktitle={Advances in neural information processing systems},
-	pages={3111--3119},
-	year={2013}
-}
+
 
 
 @inproceedings{pennington2014glove,
@@ -155,7 +149,7 @@
 }
 
 
-@inproceedings{cao2016distribution,
+@inproceedings{cao2016,
 	title={A distribution-based model to learn bilingual word embeddings},
 	author={Cao, Hailong and Zhao, Tiejun and Zhang, Shu and Meng, Yao},
 	booktitle={Proceedings of COLING 2016, the 26th International Conference on Computational Linguistics: Technical Papers},
@@ -440,4 +434,19 @@
 	author={Hieber, Felix and Domhan, Tobias and Denkowski, Michael and Vilar, David and Sokolov, Artem and Clifton, Ann and Post, Matt},
 	journal={arXiv preprint arXiv:1712.05690},
 	year={2017}
+}
+
+@inproceedings{artetxe2016learning,
+	title={Learning principled bilingual mappings of word embeddings while preserving monolingual invariance},
+	author={Artetxe, Mikel and Labaka, Gorka and Agirre, Eneko},
+	booktitle={Proceedings of the 2016 Conference on Empirical Methods in Natural Language Processing},
+	pages={2289--2294},
+	year={2016}
+}
+
+@article{sennrich2015neural,
+	title={Neural machine translation of rare words with subword units},
+	author={Sennrich, Rico and Haddow, Barry and Birch, Alexandra},
+	journal={arXiv preprint arXiv:1508.07909},
+	year={2015}
 }
